[v1.1] Fix issue on IE for the logo

--- a/less/gallery.less
+++ b/less/gallery.less
@@ -27,7 +27,8 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   height: 300px;
   text-align: center;
-  display: inherit;
+  display: inline-block;
+  background-color: black;
 }
 
 .photo-box-thin {
@@ -35,9 +36,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .photo-box img {
+  display: block;
   height: auto;
-  min-height: 100%;
-  max-width: 100%;
 }
 
 .text-box {
