--- a/less/layout.less
+++ b/less/layout.less
@@ -8,6 +8,7 @@
 .logo-container img {
   min-height: 0;
   margin: auto;
+  margin-top: 70px;
 }
 
 @media (min-width: 1050px) {
@@ -43,6 +44,9 @@
   .photo-box {
     height: 225px;
   }
+  .logo-container img {
+    margin-top: 30px;
+  }
   .text-box {
     height: 350px;
   }
@@ -51,6 +55,10 @@
 @media (max-width: 480px) {
   .text-box {
     height: 400px;
+  }
+  .logo-container img {
+    margin-top: 10%;
+    width: 100%;
   }
   #textInfos {
     float: none;
